update doc + few bugs
